welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T = new Array[color](getMondeHauteur)
	T(0)=getCouleurSol()
	for(c <- 0 to T.length - 1) {
		avance()
		T(c) = getCouleurSol
	}
}
